online-boutique/boutique-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique
  namespace: online-boutique
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: boutique.yigitaws.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
